k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presidio-nl-api
  namespace: conduction
  labels:
    app: presidio-nl-api
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: presidio-nl-api
