k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: presidio-nl-api
  namespace: conduction
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - api.presidio-nl.conduction.nl
    secretName: presidio-nl-tls
  rules:
  - host: api.presidio-nl.conduction.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: presidio-nl-api
            port:
              number: 8000
